Update versions and remove module-infos due to loads of problems